# website-fastapi

./: Dockerfile  README.md  pyproject.toml  railway.toml
app/: config.py  main.py
app/api/: about.py  contact.py  content.py  cv.py  experience.py  metrics.py  profile.py  projects.py  services.py  skills.py  tech_stack.py
app/pages/: router.py
content/: about_freelanxur.md  about_me.md  contact.json  experience.json  metrics.json  profile.json  projects.json  services.json  skills.json  tech_stack.json
docs/plans/: 2026-02-26-website-fastapi-design.md  2026-02-26-website-fastapi-implementation.md  2026-02-27-content-reorganisation-design.md
static/css/: style.css
static/js/: main.js
templates/: index.html
