[project]
name = "website-fastapi"
version = "0.1.0"
description = "Personal portfolio website built with FastAPI"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "jinja2>=3.1.0",
    "markdown>=3.7",
    "fpdf2>=2.8.5",
    "pydantic-settings>=2.7.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]
